--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_HOST = 'mongodb+srv://ferdy:ferdy.21@cluster0-u9b1d.mongodb.net/test?retryWrites=true&w=majority'
+DB_HOST = 'mongodb+srv://ferdy:Ferdy.21@cluster0-u9b1d.mongodb.net/test?retryWrites=true&w=majority'
